# prime-calculator

./: Cargo.toml  LICENSE  README.md
src/: main.rs  primes.rs
